# raac-demo

./: Cargo.toml  Makefile  README.md
benches/: native_benchmark.rs  raac_benchmark.rs
examples/: basic.rs  cond1.rs  cond2.rs  core.rs  ctx.rs  noscope.rs  rbac.rs
resource/: sqlite.all.sql  sqlite.schema.sql
resource/actions/: all.toml
resource/entities/: preset.role.json
resource/policies/: preset.role.cedar  talent.cedar
resource/schemas/: preset.role.cedar
src/: lib.rs  main.rs
src/bootstrap/: actions.rs  mod.rs  roles.rs
src/dal/: mod.rs
src/dal/models/: action.rs  mod.rs  role.rs  talent.rs  user.rs
src/dal/sqlite/: actions.rs  mod.rs  roles_diy.rs  roles_preset.rs  talent.rs  user.rs  user_role_ref.rs
src/engine/: mod.rs  resource.rs  talent.rs
src/engine/abac/: mod.rs  talent.rs
src/engine/authentity/: mod.rs  talent.rs  user.rs
src/engine/rbac/: diy.rs  mod.rs  preset.rs
src/util/: cedar.rs  mod.rs  sqlx.rs
tests/: abac.rs  rbac.rs
tests/common/: mod.rs
