[package]
name = "raac-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cedar-policy = "4.2.2"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
colored = "2.2.0"
once_cell = "1.20.2"
toml = "0.8.19"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["full"] }
moka = { version = "0.12.10", features = ["future"] }

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio"]}

[[bench]]
name = "native_benchmark"
harness = false

[[bench]]
name = "raac_benchmark"
harness = false

[profile.release]
panic = "abort"
opt-level = 3
